# mslauncher

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  commandline.cpp  commandline.h  data.cpp  data.h  discordsrv.cpp  discordsrv.h  lupdate_cmd.bat  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mslauncher_ja_JP.ts  pubspec.yaml  rcon.cpp  rcon.h  release_win.bat  server.h  serverproperty.cpp  serverproperty.h
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/mslauncher/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
back/: commandline.cpp  commandline.h  discordsrv.cpp  discordsrv.h  download.cpp  download.h  downloadmanager.cpp  downloadmanager.h  java.cpp  java.h  os.cpp  os.h  qtdownload.cpp  qtdownload.h  rcon.cpp  rcon.h  zip.cpp  zip.h
data/: data.cpp  data.h  server.cpp  server.h  serverproperty.cpp  serverproperty.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lang/: en.ts  ja.ts  lupdate_cmd.bat
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
msconnect/msconnect/: CMakeLists.txt  commandline.cpp  commandline.h  downloadmanager.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  os.cpp
net/: forge.cpp
res/: icon.aps
res/lang/: en.ts  ja.ts  lupdate_cmd.bat  tsqm.bat
servertype/: forge.cpp  forge.h  serverrun.cpp  serverrun.h
test/: widget_test.dart
ui/: comboboxwindow.cpp  comboboxwindow.h
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
